<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="?attr/backgroundColor"
    tools:context=".SinglePlayer.SinglePlayerLevelChooser">

    <LinearLayout
        android:id="@+id/sp_text_lly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/drop"
            android:textColor="?attr/TextEnable"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/tac"
            android:textColor="?attr/TextDisable"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/toe"
            android:textColor="?attr/TextDisable"
            android:textSize="38sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="choose game level"
        android:fontFamily="@font/nunito_bold"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="?attr/VSColor"
        android:textSize="18sp"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn_single_player_easy"
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/main_button_bg"
        android:elevation="10dp"
        android:onClick="SinglePlayerEasy"
        android:text="@string/easy"
        android:textColor="?attr/backgroundColor"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_single_player_hard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/main_button_bg"
        android:elevation="10dp"
        android:onClick="SinglePlayerHard"
        android:text="@string/hard"
        android:textColor="?attr/backgroundColor"
        android:textSize="14sp" />


</LinearLayout>