<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".AboutApp">

    <LinearLayout
        android:id="@+id/main_text_lly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/drop"
            android:textColor="?attr/TextEnable"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/tac"
            android:textColor="?attr/TextDisable"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/toe"
            android:textColor="?attr/TextDisable"
            android:textSize="34sp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:id="@+id/dc_logo_img"
        app:srcCompat="@drawable/dc_logo_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:padding="2dp"
        android:text="Version 1.4"
        android:textColor="?attr/VSColor"
        android:textSize="24sp" />

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/about_app"
        android:textColor="?attr/VSColor"
        android:textSize="14sp"
        android:gravity="center"/>

</LinearLayout>