<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="?attr/backgroundColor"
    android:gravity="center"
    tools:context=".GameOver">

    <LinearLayout
        android:id="@+id/game_over_text_lly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView_game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/game_over_text_lly"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/drop"
            android:textColor="?attr/TextEnable"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/tac"
            android:textColor="?attr/TextDisable"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/toe"
            android:textColor="?attr/TextDisable"
            android:textSize="34sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView_game_over"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_over_text_lly"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="?attr/TextDisable"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_game_over"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="You won"
        android:textColor="?attr/TextEnable"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/restart_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/restart_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginBottom="160dp"
        app:srcCompat="@drawable/ic_outline_refresh_24px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>