<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/main_text_lly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/drop"
            android:textColor="?attr/TextEnable"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/tac"
            android:textColor="?attr/TextDisable"
            android:textSize="38sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:text="@string/toe"
            android:textColor="?attr/TextDisable"
            android:textSize="38sp" />


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:id="@+id/drop_tac_toe_logo_img"
        app:srcCompat="@drawable/drop_tac_toe_logo_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable Day Mode"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="?attr/TextEnable"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Day Mode"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:fontFamily="@font/nunito_semibold"
            android:id="@+id/day_mode_switch"
            android:textColor="?attr/VSColor"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/setting_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/main_button_bg"
        android:onClick="BuyCodes"
        android:text="Buy source code"
        android:textColor="?attr/backgroundColor" />


</LinearLayout>