<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SinglePlayer.SinglePlayerBoardEasy">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:background="?attr/backgroundColor"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/TextDisable"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:background="?attr/backgroundColor"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/player_1_btn_s_e"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_bg_left_curv_enable"
            android:fontFamily="@font/nunito"
            android:text="@string/you"
            android:textColor="?attr/backgroundColor" />


        <Button
            android:id="@+id/player_2_btn_s_e"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_bg_right_curv_disable"
            android:fontFamily="@font/nunito"
            android:text="@string/bot"
            android:textColor="?attr/backgroundColor" />


    </LinearLayout>

    <TextView
        android:id="@+id/single_player_vs_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/nunito_bold"
        android:text="VS"
        android:textAllCaps="true"
        android:textColor="?attr/VSColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_marginBottom="25dp"
        android:background="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

            <Button
                android:id="@+id/button_1_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_2_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_3_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

            <Button
                android:id="@+id/button_4_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_5_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_6_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

            <Button
                android:id="@+id/button_7_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_8_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_9_s"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="?attr/buttonDisable"
                android:fontFamily="@font/nunito_bold"
                android:onClick="GameClick"
                android:textColor="?attr/backgroundColor"
                android:textSize="50sp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>